--- a/Ricky+Morty/Ricky+Morty/CustomViews/Cells/CharacterCollectionViewCell.xib
+++ b/Ricky+Morty/Ricky+Morty/CustomViews/Cells/CharacterCollectionViewCell.xib
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -11,49 +12,110 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CharacterCell" id="gTV-IL-0wX" customClass="CharacterCollectionViewCell" customModule="Ricky_Morty" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="381" height="310"/>
+            <rect key="frame" x="0.0" y="0.0" width="311" height="254"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="381" height="310"/>
+                <rect key="frame" x="0.0" y="0.0" width="311" height="254"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XzM-tH-Ptc">
-                        <rect key="frame" x="16" y="16" width="349" height="278"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XzM-tH-Ptc" customClass="CustomView" customModule="Ricky_Morty" customModuleProvider="target">
+                        <rect key="frame" x="16" y="17" width="279" height="220"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mMf-Xo-6Bv">
-                                <rect key="frame" x="158" y="128.5" width="33" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="dUl-0Y-ApS" customClass="CustomImageView" customModule="Ricky_Morty" customModuleProvider="target">
+                                <rect key="frame" x="16" y="60" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="YLT-xZ-lPN"/>
+                                    <constraint firstAttribute="height" constant="100" id="iuX-W7-Avs"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="50"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="p4S-p5-A38">
+                                <rect key="frame" x="124" y="76.5" width="139" height="67.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RSl-Ir-mIU">
+                                        <rect key="frame" x="0.0" y="0.0" width="139" height="19.5"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Srd-xJ-fbP">
+                                        <rect key="frame" x="0.0" y="25.5" width="139" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <color key="textColor" systemColor="secondaryLabelColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Of-k1-ep0">
+                                        <rect key="frame" x="0.0" y="49.5" width="139" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <color key="textColor" systemColor="secondaryLabelColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" name="CardColor"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="mMf-Xo-6Bv" secondAttribute="trailing" constant="16" id="95P-BC-2pT"/>
-                            <constraint firstItem="mMf-Xo-6Bv" firstAttribute="centerX" secondItem="XzM-tH-Ptc" secondAttribute="centerX" id="TnI-0T-Naa"/>
-                            <constraint firstItem="mMf-Xo-6Bv" firstAttribute="centerY" secondItem="XzM-tH-Ptc" secondAttribute="centerY" id="x8p-pG-HVV"/>
-                            <constraint firstItem="mMf-Xo-6Bv" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="XzM-tH-Ptc" secondAttribute="leading" constant="16" id="zyg-V3-UCk"/>
+                            <constraint firstAttribute="width" constant="279" id="FyT-Kv-JJ0"/>
+                            <constraint firstAttribute="trailing" secondItem="p4S-p5-A38" secondAttribute="trailing" constant="16" id="Z0j-Ev-EW9"/>
+                            <constraint firstAttribute="height" constant="220" id="ZtN-3G-QVJ"/>
+                            <constraint firstItem="dUl-0Y-ApS" firstAttribute="leading" secondItem="XzM-tH-Ptc" secondAttribute="leading" constant="16" id="cFy-Lw-H6Z"/>
+                            <constraint firstItem="p4S-p5-A38" firstAttribute="centerY" secondItem="dUl-0Y-ApS" secondAttribute="centerY" id="fkM-6S-qtr"/>
+                            <constraint firstItem="p4S-p5-A38" firstAttribute="leading" secondItem="dUl-0Y-ApS" secondAttribute="trailing" constant="8" id="qaB-t8-k6Y"/>
+                            <constraint firstItem="dUl-0Y-ApS" firstAttribute="centerY" secondItem="XzM-tH-Ptc" secondAttribute="centerY" id="wgV-n5-1gv"/>
                         </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <real key="value" value="30"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="shadowOpacity">
+                                <real key="value" value="0.20000000000000001"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="shadowOffset">
+                                <integer key="value" value="10"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
+                                <real key="value" value="10"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
+                                <color key="value" name="ShadowColor"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
                     </view>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="XzM-tH-Ptc" secondAttribute="bottom" constant="16" id="DxX-MK-c3T"/>
-                <constraint firstItem="XzM-tH-Ptc" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="16" id="IXk-t9-CvU"/>
-                <constraint firstAttribute="trailing" secondItem="XzM-tH-Ptc" secondAttribute="trailing" constant="16" id="REi-bG-MeY"/>
-                <constraint firstItem="XzM-tH-Ptc" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="16" id="l0c-Dc-nF1"/>
+                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="XzM-tH-Ptc" secondAttribute="bottom" constant="16" id="DxX-MK-c3T"/>
+                <constraint firstItem="XzM-tH-Ptc" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="16" id="IXk-t9-CvU"/>
+                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="XzM-tH-Ptc" secondAttribute="trailing" constant="16" id="REi-bG-MeY"/>
+                <constraint firstItem="XzM-tH-Ptc" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="a2b-7M-FbR"/>
+                <constraint firstItem="XzM-tH-Ptc" firstAttribute="top" relation="greaterThanOrEqual" secondItem="gTV-IL-0wX" secondAttribute="top" constant="16" id="l0c-Dc-nF1"/>
+                <constraint firstItem="XzM-tH-Ptc" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="yeI-D0-2uA"/>
             </constraints>
-            <size key="customSize" width="381" height="310"/>
+            <size key="customSize" width="311" height="254"/>
             <connections>
-                <outlet property="titleLabel" destination="mMf-Xo-6Bv" id="fHm-4J-8jD"/>
+                <outlet property="image" destination="dUl-0Y-ApS" id="Zfq-GA-ZPk"/>
+                <outlet property="nameLabel" destination="RSl-Ir-mIU" id="JRf-85-61j"/>
+                <outlet property="originLabel" destination="Srd-xJ-fbP" id="fep-rb-qE8"/>
+                <outlet property="statusLabel" destination="3Of-k1-ep0" id="nFV-bF-WEX"/>
             </connections>
-            <point key="canvasLocation" x="-73" y="-120"/>
+            <point key="canvasLocation" x="-864.49275362318849" y="-340.17857142857139"/>
         </collectionViewCell>
     </objects>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        <image name="placeholder" width="800" height="540"/>
+        <namedColor name="CardColor">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="ShadowColor">
+            <color red="0.0" green="0.0" blue="0.0" alpha="0.20000000000000001" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <systemColor name="secondaryLabelColor">
+            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
