--- a/Ricky+Morty/Ricky+Morty/CustomViews/Cells/CharacterCollectionViewCell.xib
+++ b/Ricky+Morty/Ricky+Morty/CustomViews/Cells/CharacterCollectionViewCell.xib
@@ -12,17 +12,17 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CharacterCell" id="gTV-IL-0wX" customClass="CharacterCollectionViewCell" customModule="Ricky_Morty" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="311" height="254"/>
+            <rect key="frame" x="0.0" y="0.0" width="333" height="310"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="311" height="254"/>
+                <rect key="frame" x="0.0" y="0.0" width="333" height="310"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XzM-tH-Ptc" customClass="CustomView" customModule="Ricky_Morty" customModuleProvider="target">
-                        <rect key="frame" x="30.5" y="37" width="250" height="180"/>
+                        <rect key="frame" x="41.5" y="60.5" width="250" height="189"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="dUl-0Y-ApS" customClass="CustomImageView" customModule="Ricky_Morty" customModuleProvider="target">
-                                <rect key="frame" x="16" y="50" width="80" height="80"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="dUl-0Y-ApS" customClass="RoundImageView" customModule="Ricky_Morty" customModuleProvider="target">
+                                <rect key="frame" x="85" y="16" width="80" height="80"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="dUl-0Y-ApS" secondAttribute="height" multiplier="1:1" id="PdH-v2-WgE"/>
                                     <constraint firstAttribute="width" constant="80" id="YLT-xZ-lPN"/>
@@ -34,22 +34,22 @@
                                 </userDefinedRuntimeAttributes>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="p4S-p5-A38">
-                                <rect key="frame" x="108" y="59.5" width="126" height="61"/>
+                                <rect key="frame" x="106.5" y="112" width="37.5" height="61"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RSl-Ir-mIU">
-                                        <rect key="frame" x="0.0" y="0.0" width="126" height="17"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RSl-Ir-mIU">
+                                        <rect key="frame" x="0.0" y="0.0" width="37.5" height="17"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Srd-xJ-fbP">
-                                        <rect key="frame" x="0.0" y="23" width="126" height="16"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Srd-xJ-fbP">
+                                        <rect key="frame" x="0.0" y="23" width="37.5" height="16"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                         <color key="textColor" systemColor="secondaryLabelColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Of-k1-ep0">
-                                        <rect key="frame" x="0.0" y="45" width="126" height="16"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Of-k1-ep0">
+                                        <rect key="frame" x="0.0" y="45" width="37.5" height="16"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                         <color key="textColor" systemColor="secondaryLabelColor"/>
                                         <nil key="highlightedColor"/>
@@ -59,13 +59,14 @@
                         </subviews>
                         <color key="backgroundColor" name="CardColor"/>
                         <constraints>
+                            <constraint firstItem="p4S-p5-A38" firstAttribute="centerX" secondItem="dUl-0Y-ApS" secondAttribute="centerX" id="4r2-VG-dit"/>
                             <constraint firstAttribute="width" constant="250" id="FyT-Kv-JJ0"/>
-                            <constraint firstAttribute="trailing" secondItem="p4S-p5-A38" secondAttribute="trailing" constant="16" id="Z0j-Ev-EW9"/>
-                            <constraint firstAttribute="height" constant="180" id="ZtN-3G-QVJ"/>
-                            <constraint firstItem="dUl-0Y-ApS" firstAttribute="leading" secondItem="XzM-tH-Ptc" secondAttribute="leading" constant="16" id="cFy-Lw-H6Z"/>
-                            <constraint firstItem="p4S-p5-A38" firstAttribute="centerY" secondItem="dUl-0Y-ApS" secondAttribute="centerY" id="fkM-6S-qtr"/>
-                            <constraint firstItem="p4S-p5-A38" firstAttribute="leading" secondItem="dUl-0Y-ApS" secondAttribute="trailing" constant="12" id="qaB-t8-k6Y"/>
-                            <constraint firstItem="dUl-0Y-ApS" firstAttribute="centerY" secondItem="XzM-tH-Ptc" secondAttribute="centerY" id="wgV-n5-1gv"/>
+                            <constraint firstItem="dUl-0Y-ApS" firstAttribute="centerX" secondItem="XzM-tH-Ptc" secondAttribute="centerX" id="Gu7-sr-hUQ"/>
+                            <constraint firstItem="p4S-p5-A38" firstAttribute="top" secondItem="dUl-0Y-ApS" secondAttribute="bottom" constant="16" id="Nfq-jg-a94"/>
+                            <constraint firstItem="dUl-0Y-ApS" firstAttribute="top" secondItem="XzM-tH-Ptc" secondAttribute="top" constant="16" id="Ud2-Y1-BOL"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="p4S-p5-A38" secondAttribute="trailing" constant="16" id="bkL-lJ-xSr"/>
+                            <constraint firstAttribute="bottom" secondItem="p4S-p5-A38" secondAttribute="bottom" constant="16" id="fWs-7A-enn"/>
+                            <constraint firstItem="p4S-p5-A38" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="XzM-tH-Ptc" secondAttribute="leading" constant="16" id="ule-DV-bv0"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -97,14 +98,14 @@
                 <constraint firstItem="XzM-tH-Ptc" firstAttribute="top" relation="greaterThanOrEqual" secondItem="gTV-IL-0wX" secondAttribute="top" constant="16" id="l0c-Dc-nF1"/>
                 <constraint firstItem="XzM-tH-Ptc" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="yeI-D0-2uA"/>
             </constraints>
-            <size key="customSize" width="311" height="254"/>
+            <size key="customSize" width="333" height="310"/>
             <connections>
                 <outlet property="image" destination="dUl-0Y-ApS" id="Zfq-GA-ZPk"/>
                 <outlet property="nameLabel" destination="RSl-Ir-mIU" id="JRf-85-61j"/>
                 <outlet property="originLabel" destination="Srd-xJ-fbP" id="fep-rb-qE8"/>
                 <outlet property="statusLabel" destination="3Of-k1-ep0" id="nFV-bF-WEX"/>
             </connections>
-            <point key="canvasLocation" x="-864.49275362318849" y="-340.17857142857139"/>
+            <point key="canvasLocation" x="-1141.304347826087" y="-329.46428571428572"/>
         </collectionViewCell>
     </objects>
     <resources>
