--- a/Ricky+Morty/Ricky+Morty/Base.lproj/Main.storyboard
+++ b/Ricky+Morty/Ricky+Morty/Base.lproj/Main.storyboard
@@ -78,9 +78,24 @@
                     <view key="view" contentMode="scaleToFill" id="Myw-gu-iDg">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Xcb-3Z-zee">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="wQY-NQ-Vcw"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Xcb-3Z-zee" firstAttribute="leading" secondItem="wQY-NQ-Vcw" secondAttribute="leading" id="DWm-XA-CR4"/>
+                            <constraint firstItem="wQY-NQ-Vcw" firstAttribute="bottom" secondItem="Xcb-3Z-zee" secondAttribute="bottom" id="Rcd-Xl-ylL"/>
+                            <constraint firstItem="Xcb-3Z-zee" firstAttribute="top" secondItem="wQY-NQ-Vcw" secondAttribute="top" id="ZMQ-6w-ec9"/>
+                            <constraint firstItem="wQY-NQ-Vcw" firstAttribute="trailing" secondItem="Xcb-3Z-zee" secondAttribute="trailing" id="aIe-UB-d4i"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="Xcb-3Z-zee" id="EDW-Em-Twd"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CGR-p7-VVo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
